--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
 
 body {
     margin: 0;
-    font-family: 'Roboto', 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    /* font-family: 'Roboto', 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI',
         'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-        'Helvetica Neue', sans-serif;
+        'Helvetica Neue', sans-serif; */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
