--- a/src/styles/views/me.scss
+++ b/src/styles/views/me.scss
@@ -1,5 +1,5 @@
-.me-page {
-    .me-info {
+.user-page {
+    .user-info {
         display: flex;
         justify-content: center;
         align-items: center;
