--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,34 +1,6 @@
 #loading {
-    .loading-overlay {
-        position: fixed;
-        z-index: 999;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        background: rgba(0, 0, 0, 0.5);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .loading-spinner {
-        width: 50px;
-        height: 50px;
-        border: 5px solid white;
-        border-top: 5px solid blue;
-        border-radius: 50%;
-        animation: spin 1s linear infinite;
-    }
-
-    @keyframes spin {
-        from {
-            transform: rotate(0deg);
-        }
-        to {
-            transform: rotate(360deg);
-        }
-    }
+    z-index: 1000000;
+    position: fixed;
 }
 
 .ap-xdot {
