--- a/src/styles/views/account/account.detail.scss
+++ b/src/styles/views/account/account.detail.scss
@@ -3,11 +3,18 @@
         padding: 5px !important;
         .list-card {
             .ant-card {
+                height: 100%;
                 .ant-card-head {
                     padding: 2px 15px !important;
                 }
+                .ant-card-body {
+                    height: 100%;
+                    padding: 24px 10px;
+                    word-break: break-all;
+                }
             }
         }
+
         .main-info {
             .ant-card-head, .ant-card-body {
                 padding: 0.5rem !important;
